src/sass/layouts/_mobile-menu.scss
// ========================== Mobile menu ==============================

.mobile-menu {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: left;
  padding: 15px 0;

  &::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    top: 50%;
    border-bottom: 1px solid #1e2e36;
  }

  @media screen and (min-width: 531px) {
    &::after {
      content: '';
      position: absolute;
      width: 100%;
      height: 1px;
      top: 60%;
      border-bottom: 1px solid #1e2e36;
    }
  }

  @media screen and (min-width: 1024px) {
    display: none;
  }
}

.mobile-menu__box-nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.mobile-menu__box-list {
  width: 100%;
  justify-content: center;
  padding-top: 15px;
}

.mobile-menu__list {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 10px;
  font-size: 14px;
  text-transform: uppercase;
}

.mobile-menu__item {
  display: flex;
  align-items: center;
  transition: border-bottom 250ms linear;

  &:hover,
  &:focus {
    border-bottom: 3px solid #44c697;
  }
}

.mobile-btn {
  border: transparent;
  background: transparent;
  stroke: #1e2e36;
  fill: #1e2e36;
}

.mobile-menu__icon {
  width: 30px;
  height: 30px;
}

.mobile-menu__content {
  display: flex;
  flex-direction: column;

  position: fixed;
  top: 0;
  right: 0;

  max-width: 320px;
  height: 100%;

  padding: 100px 40px;

  background-color: #fff;

  z-index: 1;

  opacity: 0;
  transform: translate(100%, -15%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);

  &.is-open {
    transform: translate(0, 0);

    opacity: 1;
  }
}

.btn-close {
  position: absolute;
  top: 25px;
  right: 15px;

  display: inline-flex;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.mobile-menu__nav-list {
  text-transform: uppercase;
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 15px;
}

.mobile-menu__nav-link {
  transition: border-bottom 250ms linear;

  &:hover,
  &:focus {
    border-bottom: 3px solid #44c697;
  }
}

.order-box__mobile {
  display: flex;
  flex-direction: column;
  margin-top: auto;
  gap: 50px;
}

.mobile {
  display: block;
  font-size: 14px;
  max-width: 280px;
}

